# claude-token-monitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  PROJECT_STATUS_REPORT.md  README.md  STATUS.md  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/core/: __init__.py  config.py  data_processor.py  export_service.py  file_watcher.py  logger.py  pricing.py  schemas.py  stats_reader.py
backend/app/db/: __init__.py  database.py  models.py
backend/scripts/: migrate.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_data_processor.py  test_database.py  test_file_watcher.py  test_pricing.py  test_routes.py  test_schemas.py  test_stats_reader.py  test_websocket.py
backend/tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_db_integration.py  test_watcher_integration.py  test_ws_integration.py
backend/tests/performance/: __init__.py  conftest.py  test_api_performance.py
docker/: CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  VERIFICATION.md  daemon.json.example
docs/: PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  analysis-report.md  api-design.md  backend-development-plan.md  component-reference.md  database-design.md  design-spec.html  devops-plan.md  executable-task-list.md  frontend-architecture.md  frontend-development-plan.md  frontend-roadmap.md  phase3-file-watching.md  react-refactor-plan.md  solution-comparison.md  tauri-desktop-plan.md  tech-stack.md  technical-design.md  testing-plan.md  ui-prototype-v2.html  ui-prototype.html  web-ui-docker-analysis.md
frontend/: .eslintrc.cjs  .gitignore  ACCESSIBILITY_REPORT.md  ACCESSIBILITY_VALIDATION_REPORT.md  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_SUMMARY.md  PHASE_12_COMPLETION_SUMMARY.md  PHASE_12_FE-7.2_E2E_TESTS.md  PHASE_9_COMPLETION_REPORT.md  PHASE_9_IMPLEMENTATION.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/components/: Settings.svelte
frontend/src/lib/components/charts/: ActivityHeatmap.svelte  CostChart.svelte  ModelPieChart.svelte  TrendChart.svelte  index.ts
frontend/src/lib/components/common/: index.ts  (+5 more)
frontend/src/lib/services/: api.ts  export.ts  index.ts  websocket.ts
frontend/src/lib/stores/: index.ts  statsStore.ts  themeStore.ts  wsStore.ts
frontend/src/lib/types/: api.ts  chart.ts  index.ts  stats.ts
frontend/src/lib/utils/: accessibility.ts  pricing.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/examples/: cost-estimate-panel.svelte
frontend/tests/: setup.ts
frontend/tests/components/: DateRangePicker.test.ts  ErrorMessage.test.ts  LoadingSpinner.test.ts  StatCard.test.ts
frontend/tests/components/common/: DateRangePicker.test.ts  ErrorMessage.test.ts  LoadingSpinner.test.ts  StatCard.test.ts
frontend/tests/components/layout/: ThemeToggle.test.ts
frontend/tests/e2e/: dashboard.spec.ts  fixtures.ts  interactions.spec.ts  responsive.spec.ts
frontend/tests/services/: api.test.ts  websocket.test.ts
frontend/tests/stores/: statsStore.test.ts  themeStore.test.ts  wsStore.test.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  provider.rs  stats.rs
src-tauri/src/db/: migrations.rs  mod.rs  repository.rs  schema.rs
src-tauri/src/models/: message.rs  mod.rs  provider.rs  stats.rs
src-tauri/src/services/: file_watcher.rs  mod.rs  parser.rs  pricing.rs  provider_tracker.rs
src-tauri/tests/: parser_integration.rs  repository_integration.rs
src/components/common/: DataTable.tsx  Dialog.tsx  Feedback.tsx  StatCard.tsx
src/components/dashboard/: DailyActivityPanel.tsx  FlowChart.tsx  KPIGrid.tsx  ModelUsagePanel.tsx  RealTimeLogs.tsx  TrafficDetails.tsx
src/components/layout/: AppLayout.tsx
src/hooks/: useResponsiveScale.ts  useTauriCommand.ts  useTauriEvents.ts  useTheme.ts
src/lib/: utils.ts
src/pages/: Dashboard.tsx  Logs.tsx  Providers.tsx  Settings.tsx
src/store/: index.ts
src/types/: store.ts  tauri.ts
(+13 files in other folders)
